--- a/index.html
+++ b/index.html
@@ -413,38 +413,32 @@
     <ul class="clients-list has-scrollbar">
 
       <li class="clients-item">
-        <a href="#">
+        <a href="https://badges.ucalgary.ca/achievements/1cf0ddaacfb74a372d9764b2b5928c89" target="_blank">
           <img src="./assets/images/leadership.jpg" alt="Engineering Leadership Program">
         </a>
         <div class="clients-text">
           <h4 class="h4 clients-item-title">Engineering Leadership Program, University of Calgary</h4>
-          <p>
-            Gained leadership skills through various workshops and events, mastering team dynamics, emotional intelligence, and project management.
-          </p>
+
         </div>
       </li>
 
       <li class="clients-item">
-        <a href="#">
+        <a href="https://badges.ucalgary.ca/achievements/0aedae926f1656f8f160898633ce938a" target="_blank">
           <img src="./assets/images/research.jpg" alt="Research Skills Foundations">
         </a>
         <div class="clients-text">
           <h4 class="h4 clients-item-title">Research Skills Foundations, Taylor Institute for Teaching and Learning</h4>
-          <p>
-            Acquired essential research skills through online events and workshops, enhancing understanding of researcher identity and personal skill development.
-          </p>
+
         </div>
       </li>
 
       <li class="clients-item">
-        <a href="#">
+        <a href="https://badges.ucalgary.ca/achievements/47696515ce116e476475b8407b7c7761" target="_blank">
           <img src="./assets/images/entrepreneurship.jpg" alt="Engineering Entrepreneurship Essentials">
         </a>
         <div class="clients-text">
           <h4 class="h4 clients-item-title">Engineering Entrepreneurship Essentials, University of Calgary</h4>
-          <p>
-            Developed expertise in marketing and customer development, along with skills in entrepreneurial project planning and management.
-          </p>
+
         </div>
       </li>
 
@@ -500,7 +494,7 @@
               </div>
               <ol class="timeline-list">
                 <li class="timeline-item">
-                  <h4 class="h4 timeline-item-title">Artificial Intelligence Research Intern</h4>
+                  <h4 class="h4 timeline-item-title">Artificial Intelligence Research Intern, University of Calgary</h4>
                   <span>May 2024 — Sep. 2024</span>
                   <p class="timeline-text">
                     Conducted a literature review on AI's impact on education and developed guidelines for AI integration.
@@ -514,14 +508,14 @@
                   </p>
                 </li>
                 <li class="timeline-item">
-                  <h4 class="h4 timeline-item-title">Machine Learning Research Intern</h4>
+                  <h4 class="h4 timeline-item-title">Machine Learning Research Intern, University of Calgary</h4>
                   <span>May 2023 — Sep. 2023</span>
                   <p class="timeline-text">
                     Reviewed data analytics ROI and developed a web tool for ROI analysis, implementing cost-effective ML models.
                   </p>
                 </li>
                 <li class="timeline-item">
-                  <h4 class="h4 timeline-item-title">Full-Stack Development Research Intern</h4>
+                  <h4 class="h4 timeline-item-title">Full-Stack Development Research Intern, University of Calgary</h4>
                   <span>May 2022 — Sep. 2022</span>
                   <p class="timeline-text">
                     Developed a mobile navigation app using React-Native and Firebase, enhancing urban mobility with integrated APIs.
