--- a/index.html
+++ b/index.html
@@ -475,6 +475,38 @@
             <h3 class="h3 clients-title">Certificates</h3>
 
             <ul class="clients-list has-scrollbar">
+               <li class="clients-item">
+                <a
+                  href="https://academy.langchain.com/certificates/c99kdrt5dn"
+                  target="_blank"
+                >
+                  <img
+                    src="./assets/images/LangChain.jpg"
+                    alt="Introduction to LangGraph"
+                  />
+                </a>
+                <div class="clients-text">
+                  <h4 class="h4 clients-item-title">
+                    Introduction to LangGraph
+                  </h4>
+                </div>
+              </li>
+              <li class="clients-item">
+                <a
+                  href="assets/files/AWS-Technical-Essentials.pdf"
+                  target="_blank"
+                >
+                  <img
+                    src="./assets/images/aws-logo.jpg"
+                    alt="AWS Cloud Essentials"
+                  />
+                </a>
+                <div class="clients-text">
+                  <h4 class="h4 clients-item-title">
+                    AWS Cloud Essentials
+                  </h4>
+                </div>
+              </li>
               <li class="clients-item">
                 <a
                   href="https://badges.ucalgary.ca/achievements/1cf0ddaacfb74a372d9764b2b5928c89"
@@ -487,7 +519,7 @@
                 </a>
                 <div class="clients-text">
                   <h4 class="h4 clients-item-title">
-                    Engineering Leadership Program, University of Calgary
+                    Engineering Leadership Program
                   </h4>
                 </div>
               </li>
@@ -504,7 +536,7 @@
                 </a>
                 <div class="clients-text">
                   <h4 class="h4 clients-item-title">
-                    Research Skills Foundations, Taylor Institute for Teaching
+                    Research Skills Foundations
                     and Learning
                   </h4>
                 </div>
@@ -522,8 +554,7 @@
                 </a>
                 <div class="clients-text">
                   <h4 class="h4 clients-item-title">
-                    Engineering Entrepreneurship Essentials, University of
-                    Calgary
+                    Engineering seneurship Essentials
                   </h4>
                 </div>
               </li>
@@ -612,7 +643,7 @@
                 </h4>
                 <span>Sep. 2023 — Sep. 2024</span>
                 <p class="timeline-text">
-                  Developed web/mobile applications using Angular 17, Ionic, ASP.NET,
+                  Developed web/mobile applications using Angular, Ionic, ASP.NET, MS SQL,
                   and Python for different projects.
                 </p>
               </li>
@@ -704,6 +735,32 @@
             </div>
 
             <ul class="project-list">
+              <!-- <li
+                class="project-item active drop-shadow"
+                data-filter-item
+                data-category="software development"
+              >
+                <a
+                  href="https://github.com/ammar-y62/AI_QuantSim"
+                  target="_blank"
+                >
+                  <figure class="project-img">
+                    <div class="project-item-icon-box">
+                      <ion-icon name="eye-outline"></ion-icon>
+                    </div>
+
+                    <img
+                      src="./assets/images/"
+                      alt="AI Quant Simulation Tool"
+                      loading="lazy"
+                    />
+                  </figure>
+
+                  <h3 class="project-title">AI Quant Simulation Tool</h3>
+
+                  <p class="project-category">Software Development</p>
+                </a>
+              </li> -->
               <li
                 class="project-item active drop-shadow"
                 data-filter-item
