--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
             <p>
               I am Ammar Elzeftawy, a Software Engineering graduate with a minor
               in Mechatronics from the University of Calgary. I specialize in
-              full-stack development with interests in AI, mechatronics, and finance.
+              full-stack development with interests in AI.
               I am an active gym-goer who enjoys football, Jiu-Jitsu, and squash.
             </p>
 
