--- a/index.html
+++ b/index.html
@@ -612,9 +612,18 @@
             <ol class="timeline-list">
               <li class="timeline-item">
                 <h4 class="h4 timeline-item-title">
+                  Software Engineer, Thrive Creative Inc.
+                </h4>
+                <span>July 2025 — Present</span>
+                <p class="timeline-text">
+                  Designed and developed full-stack solutions for diverse client projects using React, Next.js, Node.js, GraphQL, and MySQL, applying scalable architecture patterns such as microservices, DDD, and event-driven messaging to deliver production-ready applications while building an internal billing automation system integrating ClickUp with Invoice Ninja.
+                </p>
+              </li>
+              <li class="timeline-item">
+                <h4 class="h4 timeline-item-title">
                   Software Developer (Founding Team), Worthify Rewards
                 </h4>
-                <span>June 2025 — Present</span>
+                <span>July 2025 — Present</span>
                 <p class="timeline-text">
                   Contributed to the development of a merchant web app and
                   customer mobile app for a digital rewards platform using React
