--- a/index.html
+++ b/index.html
@@ -477,6 +477,22 @@
             <ul class="clients-list has-scrollbar">
                <li class="clients-item">
                 <a
+                  href="https://catalog-education.oracle.com/ords/certview/sharebadge?id=4B2607C005A9088BC9D80DF3E513AE37008435A7B90B40318C55A71F903CD25B"
+                  target="_blank"
+                >
+                  <img
+                    src="./assets/images/oracle.jpg"
+                    alt="Oracle Cloud Infrastructure 2025 Certified AI Foundations Associate"
+                  />
+                </a>
+                <div class="clients-text">
+                  <h4 class="h4 clients-item-title">
+                    OCI AI Foundations Associate
+                  </h4>
+                </div>
+              </li>
+              <li class="clients-item">
+                <a
                   href="https://academy.langchain.com/certificates/c99kdrt5dn"
                   target="_blank"
                 >
@@ -612,9 +628,18 @@
             <ol class="timeline-list">
               <li class="timeline-item">
                 <h4 class="h4 timeline-item-title">
+                  Software Developer, Highwood Emissions Management
+                </h4>
+                <span>Nov 2025 — Present</span>
+                <p class="timeline-text">
+
+                </p>
+              </li>
+              <li class="timeline-item">
+                <h4 class="h4 timeline-item-title">
                   Software Engineer, Thrive Creative Inc.
                 </h4>
-                <span>July 2025 — Present</span>
+                <span>July 2025 — Nov 2025</span>
                 <p class="timeline-text">
                   Designed and developed full-stack solutions for diverse client projects using React, Next.js, Node.js, GraphQL, and MySQL, applying scalable architecture patterns such as microservices, DDD, and event-driven messaging to deliver production-ready applications while building an internal billing automation system integrating ClickUp with Invoice Ninja.
                 </p>
@@ -623,7 +648,7 @@
                 <h4 class="h4 timeline-item-title">
                   Software Developer (Founding Team), Worthify Rewards
                 </h4>
-                <span>July 2025 — Present</span>
+                <span>July 2025 — Nov 2025</span>
                 <p class="timeline-text">
                   Contributed to the development of a merchant web app and
                   customer mobile app for a digital rewards platform using React
